redirect to main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://pablopalafox.github.io/npms/</title>
-<meta http-equiv="refresh" content="0; URL=https://pablopalafox.github.io/npms/">
-<link rel="canonical" href="https://pablopalafox.github.io/npms/">
+<title>Redirecting to https://pablopalafox.github.io</title>
+<meta http-equiv="refresh" content="0; URL=https://pablopalafox.github.io">
+<link rel="canonical" href="https://pablopalafox.github.io">
